--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="https://kit.fontawesome.com/93c4d8dcc3.js" crossorigin="anonymous"
     ></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <!-- Java Script -->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
@@ -37,7 +37,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header__logo">
-            <img class="header__logo__img" src="images/faviconcircle.ico" alt="logo">
+            <img class="header__logo__img" src="Images/faviconcircle.ico" alt="logo">
             <h1><a class="header__logo__title" href="#">GiGi</a></h1>
         </div>
         <nav class="header__nav">
@@ -59,7 +59,7 @@
         <!-- Home -->
         <section id="home">
             <div  class="home__container">
-                <img class="home__profile" src="images/faviconnobackground.ico" alt="Gigi's profile">
+                <img class="home__profile" src="Images/faviconnobackground.ico" alt="Gigi's profile">
                 <h2 class="home__title">Hello! <br> I&#39;m a <strong class="home__title--strong">Design Enthusiast and Technology Lover</strong>&#44; GiGi</h2>
                 <p class="home__description"> I&#39;m a recent graduate skilled in design&#44; interaction design&#44; and programming&#46;<br>
                     I&#39;m passionate about combining creativity with technical know&#45;how&#44; <br>
@@ -92,14 +92,14 @@
             </ul>
             <ul class="jobs">
                 <li class="job">
-                    <img src="images/jobs/google.png" alt="google logo">
+                    <img src="Images/jobs/google.png" alt="google logo">
                     <div>
                         <p class="job__name">Google</p>
                         <p class="job__period">Lorem, ipsum dolor.</p>
                     </div>
                 </li>
                 <li class="job">
-                    <img src="images/jobs/samsung.png" alt="samsung logo">
+                    <img src="Images/jobs/samsung.png" alt="samsung logo">
                     <div>
                         <p class="job__name">Samsumg</p>
                         <p class="job__period">Lorem ipsum dolor sit.</p>
@@ -223,7 +223,7 @@
                 <ul class="projects">
                     <li class="project" data-type="front-end">
                         <a href="#" target="_blank">
-                            <img src="images/projects/project1.webp" alt="project1" class="project__img">
+                            <img src="Images/projects/project1.webp" alt="project1" class="project__img">
                             <div class="project__metadata">
                                 <h3 class="project__title">project1</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
@@ -232,7 +232,7 @@
                     </li>
                     <li class="project" data-type="front-end">
                         <a href="#" target="_blank">
-                            <img src="images/projects/project2.webp" alt="project2" class="project__img">
+                            <img src="Images/projects/project2.webp" alt="project2" class="project__img">
                             <div class="project__metadata">
                                 <h3 class="project__title">project2</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
@@ -241,7 +241,7 @@
                     </li>
                     <li class="project" data-type="mobile">
                         <a href="#" target="_blank">
-                            <img src="images/projects/project3.webp" alt="project3" class="project__img">
+                            <img src="Images/projects/project3.webp" alt="project3" class="project__img">
                             <div class="project__metadata">
                                 <h3 class="project__title">project3</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
@@ -250,7 +250,7 @@
                     </li>
                     <li class="project" data-type="front-end">
                         <a href="#" target="_blank">
-                            <img src="images/projects/project4.webp" alt="project4" class="project__img">
+                            <img src="Images/projects/project4.webp" alt="project4" class="project__img">
                             <div class="project__metadata">
                                 <h3 class="project__title">project4</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
@@ -259,7 +259,7 @@
                     </li>
                     <li class="project" data-type="animation">
                         <a href="#" target="_blank">
-                            <img src="images/projects/project5.webp" alt="project5" class="project__img">
+                            <img src="Images/projects/project5.webp" alt="project5" class="project__img">
                             <div class="project__metadata">
                                 <h3 class="project__title">project5</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
@@ -268,7 +268,7 @@
                     </li>
                     <li class="project" data-type="mobile">
                         <a href="#" target="_blank">
-                            <img src="images/projects/project6.webp" alt="project6" class="project__img">
+                            <img src="Images/projects/project6.webp" alt="project6" class="project__img">
                             <div class="project__metadata">
                                 <h3 class="project__title">project6</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
@@ -277,7 +277,7 @@
                     </li>
                     <li class="project" data-type="animation">
                         <a href="#" target="_blank">
-                            <img src="images/projects/project7.webp" alt="project7" class="project__img">
+                            <img src="Images/projects/project7.webp" alt="project7" class="project__img">
                             <div class="project__metadata">
                                 <h3 class="project__title">project7</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
@@ -286,7 +286,7 @@
                     </li>
                     <li class="project" data-type="mobile">
                         <a href="#" target="_blank">
-                            <img src="images/projects/project8.webp" alt="project8" class="project__img">
+                            <img src="Images/projects/project8.webp" alt="project8" class="project__img">
                             <div class="project__metadata">
                                 <h3 class="project__title">project8</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
@@ -302,21 +302,21 @@
             <p class="description">See what they say about me</p>
             <ul class="testimonials">
                 <li class="testimonial">
-                    <img src="images/testimonials/people1.webp" alt="people1" class="testimonial__img">
+                    <img src="Images/testimonials/people1.webp" alt="people1" class="testimonial__img">
                     <div class="tesimonial__bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam nisi accusantium ipsum facere vero nulla vitae facilis, dicta eligendi dolorem commodi veniam ab reiciendis nostrum modi animi autem ipsa?</p>
                         <p><a href="#" class="testimonial__bubble__name">Hana Jo</a> /Project partner</p>
                     </div>
                 </li>
                 <li class="testimonial">
-                    <img src="images/testimonials/people2.webp" alt="people2" class="testimonial__img">
+                    <img src="Images/testimonials/people2.webp" alt="people2" class="testimonial__img">
                     <div class="tesimonial__bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam nisi accusantium ipsum facere vero nulla vitae facilis, dicta eligendi dolorem commodi veniam ab reiciendis nostrum modi animi autem ipsa?</p>
                         <p><a href="#" class="testimonial__bubble__name">Hana Jo</a> /Project partner</p>
                     </div>
                 </li>
                 <li class="testimonial">
-                    <img src="images/testimonials/people3.webp" alt="people3" class="testimonial__img">
+                    <img src="Images/testimonials/people3.webp" alt="people3" class="testimonial__img">
                     <div class="tesimonial__bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam nisi accusantium ipsum facere vero nulla vitae facilis, dicta eligendi dolorem commodi veniam ab reiciendis nostrum modi animi autem ipsa?</p>
                         <p><a href="#" class="testimonial__bubble__name">Hana Jo</a> /Project partner</p>
